// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Runtime format Favorite with SET account relation 1`] = `
{
  "accountData": {
    "favorite": {
      "name": "Favorite",
      "type": "set",
    },
    "favoriteList": {
      "name": "Favorite",
      "type": "connection",
    },
  },
  "enums": {},
  "models": {
    "Favorite": {
      "accountRelation": {
        "fields": [
          "docID",
          "tag",
        ],
        "type": "set",
      },
      "id": "FavoriteID",
      "implements": [],
      "interface": false,
    },
  },
  "objects": {
    "Favorite": {
      "doc": {
        "relation": {
          "model": null,
          "property": "docID",
          "source": "document",
        },
        "type": "view",
        "viewType": "relation",
      },
      "docID": {
        "immutable": false,
        "required": true,
        "type": "streamid",
      },
      "note": {
        "immutable": false,
        "required": false,
        "type": "string",
      },
      "tag": {
        "immutable": false,
        "required": true,
        "type": "string",
      },
    },
  },
}
`;

exports[`Runtime format Note model definition with views 1`] = `
{
  "accountData": {
    "noteBookList": {
      "name": "NoteBook",
      "type": "connection",
    },
    "noteList": {
      "name": "Note",
      "type": "connection",
    },
  },
  "enums": {
    "NoteStatus": [
      "DEFAULT",
      "IMPORTANT",
      "ARCHIVE",
    ],
  },
  "models": {
    "Note": {
      "accountRelation": {
        "type": "list",
      },
      "id": "NoteID",
      "implements": [],
      "interface": false,
    },
    "NoteBook": {
      "accountRelation": {
        "type": "list",
      },
      "id": "NoteBookID",
      "implements": [],
      "interface": false,
    },
  },
  "objects": {
    "Note": {
      "author": {
        "type": "view",
        "viewType": "documentAccount",
      },
      "noteBook": {
        "relation": {
          "model": "NoteBookID",
          "property": "noteBookID",
          "source": "document",
        },
        "type": "view",
        "viewType": "relation",
      },
      "noteBookID": {
        "immutable": false,
        "required": false,
        "type": "streamid",
      },
      "status": {
        "immutable": false,
        "refName": "NoteStatus",
        "refType": "enum",
        "required": false,
        "type": "reference",
      },
      "text": {
        "immutable": false,
        "required": true,
        "type": "string",
      },
      "title": {
        "immutable": false,
        "indexed": true,
        "required": true,
        "type": "string",
      },
      "version": {
        "type": "view",
        "viewType": "documentVersion",
      },
    },
    "NoteBook": {
      "author": {
        "type": "view",
        "viewType": "documentAccount",
      },
      "notes": {
        "relation": {
          "model": "NoteID",
          "property": "noteBookID",
          "source": "queryConnection",
        },
        "type": "view",
        "viewType": "relation",
      },
      "notesCount": {
        "relation": {
          "model": "NoteID",
          "property": "noteBookID",
          "source": "queryCount",
        },
        "type": "view",
        "viewType": "relation",
      },
      "title": {
        "immutable": false,
        "indexed": true,
        "required": true,
        "type": "string",
      },
      "version": {
        "type": "view",
        "viewType": "documentVersion",
      },
    },
  },
}
`;

exports[`Runtime format Post with comments relations 1`] = `
{
  "accountData": {
    "commentList": {
      "name": "Comment",
      "type": "connection",
    },
    "postList": {
      "name": "Post",
      "type": "connection",
    },
  },
  "enums": {},
  "models": {
    "Comment": {
      "accountRelation": {
        "type": "list",
      },
      "id": "CommentID",
      "implements": [],
      "interface": false,
    },
    "Post": {
      "accountRelation": {
        "type": "list",
      },
      "id": "PostID",
      "implements": [],
      "interface": false,
    },
  },
  "objects": {
    "Comment": {
      "author": {
        "type": "view",
        "viewType": "documentAccount",
      },
      "post": {
        "relation": {
          "model": "PostID",
          "property": "postID",
          "source": "document",
        },
        "type": "view",
        "viewType": "relation",
      },
      "postID": {
        "immutable": false,
        "required": true,
        "type": "streamid",
      },
      "text": {
        "immutable": false,
        "indexed": true,
        "required": true,
        "type": "string",
      },
      "version": {
        "type": "view",
        "viewType": "documentVersion",
      },
    },
    "Post": {
      "author": {
        "type": "view",
        "viewType": "documentAccount",
      },
      "comments": {
        "relation": {
          "model": "CommentID",
          "property": "postID",
          "source": "queryConnection",
        },
        "type": "view",
        "viewType": "relation",
      },
      "commentsCount": {
        "relation": {
          "model": "CommentID",
          "property": "postID",
          "source": "queryCount",
        },
        "type": "view",
        "viewType": "relation",
      },
      "date": {
        "immutable": false,
        "required": false,
        "type": "datetime",
      },
      "text": {
        "immutable": false,
        "required": true,
        "type": "string",
      },
      "title": {
        "immutable": false,
        "indexed": true,
        "required": true,
        "type": "string",
      },
      "version": {
        "type": "view",
        "viewType": "documentVersion",
      },
    },
  },
}
`;

exports[`Runtime format Profile - multiples models with common local references 1`] = `
{
  "accountData": {
    "genericProfile": {
      "name": "GenericProfile",
      "type": "node",
    },
    "personProfile": {
      "name": "PersonProfile",
      "type": "node",
    },
    "socialProfile": {
      "name": "SocialProfile",
      "type": "node",
    },
  },
  "enums": {},
  "models": {
    "GenericProfile": {
      "accountRelation": {
        "type": "single",
      },
      "id": "GenericProfileID",
      "implements": [],
      "interface": false,
    },
    "PersonProfile": {
      "accountRelation": {
        "type": "single",
      },
      "id": "PersonProfileID",
      "implements": [],
      "interface": false,
    },
    "SocialProfile": {
      "accountRelation": {
        "type": "single",
      },
      "id": "SocialProfileID",
      "implements": [],
      "interface": false,
    },
  },
  "objects": {
    "GenericProfile": {
      "image": {
        "immutable": false,
        "refName": "ImageSources",
        "refType": "object",
        "required": false,
        "type": "reference",
      },
      "name": {
        "immutable": false,
        "indexed": true,
        "required": false,
        "type": "string",
      },
    },
    "ImageMetadata": {
      "height": {
        "immutable": false,
        "required": true,
        "type": "integer",
      },
      "mimeType": {
        "immutable": false,
        "required": true,
        "type": "string",
      },
      "size": {
        "immutable": false,
        "required": false,
        "type": "integer",
      },
      "src": {
        "immutable": false,
        "required": true,
        "type": "string",
      },
      "width": {
        "immutable": false,
        "required": true,
        "type": "integer",
      },
    },
    "ImageSources": {
      "alternatives": {
        "immutable": false,
        "item": {
          "immutable": false,
          "refName": "ImageMetadata",
          "refType": "object",
          "required": false,
          "type": "reference",
        },
        "required": false,
        "type": "list",
      },
      "original": {
        "immutable": false,
        "refName": "ImageMetadata",
        "refType": "object",
        "required": true,
        "type": "reference",
      },
    },
    "PersonProfile": {
      "affiliations": {
        "immutable": false,
        "item": {
          "immutable": false,
          "required": false,
          "type": "string",
        },
        "required": false,
        "type": "list",
      },
      "birthDate": {
        "immutable": false,
        "required": false,
        "type": "date",
      },
      "gender": {
        "immutable": false,
        "required": false,
        "type": "string",
      },
      "homeLocation": {
        "immutable": false,
        "required": false,
        "type": "string",
      },
      "nationalities": {
        "immutable": false,
        "item": {
          "immutable": false,
          "required": false,
          "type": "countrycode",
        },
        "required": false,
        "type": "list",
      },
      "residenceCountry": {
        "immutable": false,
        "indexed": true,
        "required": false,
        "type": "countrycode",
      },
    },
    "SocialProfile": {
      "background": {
        "immutable": false,
        "refName": "ImageSources",
        "refType": "object",
        "required": false,
        "type": "reference",
      },
      "description": {
        "immutable": false,
        "required": false,
        "type": "string",
      },
      "emoji": {
        "immutable": false,
        "required": false,
        "type": "string",
      },
      "url": {
        "immutable": false,
        "indexed": true,
        "required": false,
        "type": "string",
      },
    },
  },
}
`;

exports[`Runtime format Profile definition with added model view 1`] = `
{
  "accountData": {
    "genericProfile": {
      "name": "GenericProfile",
      "type": "node",
    },
    "personProfile": {
      "name": "PersonProfile",
      "type": "node",
    },
    "socialProfile": {
      "name": "SocialProfile",
      "type": "node",
    },
  },
  "enums": {},
  "models": {
    "GenericProfile": {
      "accountRelation": {
        "type": "single",
      },
      "id": "GenericProfileID",
      "implements": [],
      "interface": false,
    },
    "PersonProfile": {
      "accountRelation": {
        "type": "single",
      },
      "id": "PersonProfileID",
      "implements": [],
      "interface": false,
    },
    "SocialProfile": {
      "accountRelation": {
        "type": "single",
      },
      "id": "SocialProfileID",
      "implements": [],
      "interface": false,
    },
  },
  "objects": {
    "GenericProfile": {
      "image": {
        "immutable": false,
        "refName": "ImageSources",
        "refType": "object",
        "required": false,
        "type": "reference",
      },
      "name": {
        "immutable": false,
        "indexed": true,
        "required": false,
        "type": "string",
      },
      "version": {
        "type": "view",
        "viewType": "documentVersion",
      },
    },
    "ImageMetadata": {
      "height": {
        "immutable": false,
        "required": true,
        "type": "integer",
      },
      "mimeType": {
        "immutable": false,
        "required": true,
        "type": "string",
      },
      "size": {
        "immutable": false,
        "required": false,
        "type": "integer",
      },
      "src": {
        "immutable": false,
        "required": true,
        "type": "string",
      },
      "width": {
        "immutable": false,
        "required": true,
        "type": "integer",
      },
    },
    "ImageSources": {
      "alternatives": {
        "immutable": false,
        "item": {
          "immutable": false,
          "refName": "ImageMetadata",
          "refType": "object",
          "required": false,
          "type": "reference",
        },
        "required": false,
        "type": "list",
      },
      "original": {
        "immutable": false,
        "refName": "ImageMetadata",
        "refType": "object",
        "required": true,
        "type": "reference",
      },
    },
    "PersonProfile": {
      "affiliations": {
        "immutable": false,
        "item": {
          "immutable": false,
          "required": false,
          "type": "string",
        },
        "required": false,
        "type": "list",
      },
      "birthDate": {
        "immutable": false,
        "required": false,
        "type": "date",
      },
      "gender": {
        "immutable": false,
        "required": false,
        "type": "string",
      },
      "homeLocation": {
        "immutable": false,
        "required": false,
        "type": "string",
      },
      "nationalities": {
        "immutable": false,
        "item": {
          "immutable": false,
          "required": false,
          "type": "countrycode",
        },
        "required": false,
        "type": "list",
      },
      "residenceCountry": {
        "immutable": false,
        "indexed": true,
        "required": false,
        "type": "countrycode",
      },
    },
    "SocialProfile": {
      "background": {
        "immutable": false,
        "refName": "ImageSources",
        "refType": "object",
        "required": false,
        "type": "reference",
      },
      "description": {
        "immutable": false,
        "required": false,
        "type": "string",
      },
      "emoji": {
        "immutable": false,
        "required": false,
        "type": "string",
      },
      "url": {
        "immutable": false,
        "indexed": true,
        "required": false,
        "type": "string",
      },
    },
  },
}
`;

exports[`Runtime format Social network kitchen sink 1`] = `
{
  "accountData": {
    "followingOfFollows": {
      "name": "Follows",
      "property": "following",
      "type": "account-set",
    },
    "followingOfFollowsList": {
      "name": "Follows",
      "property": "following",
      "type": "account",
    },
    "follows": {
      "name": "Follows",
      "type": "set",
    },
    "followsList": {
      "name": "Follows",
      "type": "connection",
    },
    "like": {
      "name": "Like",
      "type": "set",
    },
    "likeList": {
      "name": "Like",
      "type": "connection",
    },
    "postList": {
      "name": "Post",
      "type": "connection",
    },
    "postTag": {
      "name": "PostTag",
      "type": "set",
    },
    "postTagList": {
      "name": "PostTag",
      "type": "connection",
    },
    "tag": {
      "name": "Tag",
      "type": "set",
    },
    "tagList": {
      "name": "Tag",
      "type": "connection",
    },
    "textPostList": {
      "name": "TextPost",
      "type": "connection",
    },
  },
  "enums": {},
  "models": {
    "Follows": {
      "accountRelation": {
        "fields": [
          "following",
        ],
        "type": "set",
      },
      "id": "FollowsID",
      "implements": [],
      "interface": false,
    },
    "Like": {
      "accountRelation": {
        "fields": [
          "postID",
        ],
        "type": "set",
      },
      "id": "LikeID",
      "implements": [],
      "interface": false,
    },
    "Post": {
      "accountRelation": {
        "type": "none",
      },
      "id": "PostID",
      "implements": [],
      "interface": true,
    },
    "PostTag": {
      "accountRelation": {
        "fields": [
          "postID",
          "tagID",
        ],
        "type": "set",
      },
      "id": "PostTagID",
      "implements": [],
      "interface": false,
    },
    "Tag": {
      "accountRelation": {
        "fields": [
          "name",
        ],
        "type": "set",
      },
      "id": "TagID",
      "implements": [],
      "interface": false,
    },
    "TextPost": {
      "accountRelation": {
        "type": "list",
      },
      "id": "TextPostID",
      "implements": [
        "PostID",
      ],
      "interface": false,
    },
  },
  "objects": {
    "Follows": {
      "date": {
        "immutable": false,
        "indexed": true,
        "required": false,
        "type": "date",
      },
      "follower": {
        "type": "view",
        "viewType": "documentAccount",
      },
      "following": {
        "immutable": false,
        "required": true,
        "type": "did",
      },
    },
    "Like": {
      "post": {
        "relation": {
          "model": null,
          "property": "postID",
          "source": "document",
        },
        "type": "view",
        "viewType": "relation",
      },
      "postID": {
        "immutable": false,
        "required": true,
        "type": "streamid",
      },
    },
    "Post": {
      "date": {
        "immutable": false,
        "required": true,
        "type": "datetime",
      },
      "like": {
        "relation": {
          "model": "LikeID",
          "property": "postID",
          "source": "set",
        },
        "type": "view",
        "viewType": "relation",
      },
      "likesCount": {
        "relation": {
          "model": "LikeID",
          "property": "postID",
          "source": "queryCount",
        },
        "type": "view",
        "viewType": "relation",
      },
      "postTag": {
        "relation": {
          "model": "PostTagID",
          "property": "postID",
          "source": "set",
        },
        "type": "view",
        "viewType": "relation",
      },
      "postTags": {
        "relation": {
          "model": "PostTagID",
          "property": "postID",
          "source": "queryConnection",
        },
        "type": "view",
        "viewType": "relation",
      },
      "postTagsCount": {
        "relation": {
          "model": "PostTagID",
          "property": "postID",
          "source": "queryCount",
        },
        "type": "view",
        "viewType": "relation",
      },
      "threadID": {
        "immutable": false,
        "required": false,
        "type": "streamid",
      },
      "threadPost": {
        "relation": {
          "model": null,
          "property": "threadID",
          "source": "document",
        },
        "type": "view",
        "viewType": "relation",
      },
    },
    "PostTag": {
      "post": {
        "relation": {
          "model": null,
          "property": "postID",
          "source": "document",
        },
        "type": "view",
        "viewType": "relation",
      },
      "postID": {
        "immutable": false,
        "indexed": true,
        "required": true,
        "type": "streamid",
      },
      "tag": {
        "relation": {
          "model": null,
          "property": "tagID",
          "source": "document",
        },
        "type": "view",
        "viewType": "relation",
      },
      "tagID": {
        "immutable": false,
        "indexed": true,
        "required": true,
        "type": "streamid",
      },
    },
    "Tag": {
      "description": {
        "immutable": false,
        "required": false,
        "type": "string",
      },
      "name": {
        "immutable": false,
        "required": true,
        "type": "string",
      },
      "postTag": {
        "relation": {
          "model": "PostTagID",
          "property": "tagID",
          "source": "set",
        },
        "type": "view",
        "viewType": "relation",
      },
      "postTags": {
        "relation": {
          "model": "PostTagID",
          "property": "tagID",
          "source": "queryConnection",
        },
        "type": "view",
        "viewType": "relation",
      },
      "postTagsCount": {
        "relation": {
          "model": "PostTagID",
          "property": "tagID",
          "source": "queryCount",
        },
        "type": "view",
        "viewType": "relation",
      },
    },
    "TextPost": {
      "date": {
        "immutable": false,
        "required": true,
        "type": "datetime",
      },
      "like": {
        "relation": {
          "model": "LikeID",
          "property": "postID",
          "source": "set",
        },
        "type": "view",
        "viewType": "relation",
      },
      "likesCount": {
        "relation": {
          "model": "LikeID",
          "property": "postID",
          "source": "queryCount",
        },
        "type": "view",
        "viewType": "relation",
      },
      "postTag": {
        "relation": {
          "model": "PostTagID",
          "property": "postID",
          "source": "set",
        },
        "type": "view",
        "viewType": "relation",
      },
      "postTags": {
        "relation": {
          "model": "PostTagID",
          "property": "postID",
          "source": "queryConnection",
        },
        "type": "view",
        "viewType": "relation",
      },
      "postTagsCount": {
        "relation": {
          "model": "PostTagID",
          "property": "postID",
          "source": "queryCount",
        },
        "type": "view",
        "viewType": "relation",
      },
      "text": {
        "immutable": false,
        "required": true,
        "type": "string",
      },
      "threadID": {
        "immutable": false,
        "required": false,
        "type": "streamid",
      },
      "threadPost": {
        "relation": {
          "model": null,
          "property": "threadID",
          "source": "document",
        },
        "type": "view",
        "viewType": "relation",
      },
    },
  },
}
`;

exports[`Runtime format Social with account reference 1`] = `
{
  "accountData": {
    "otherOfPersonMetList": {
      "name": "PersonMet",
      "property": "other",
      "type": "account",
    },
    "personMetList": {
      "name": "PersonMet",
      "type": "connection",
    },
  },
  "enums": {},
  "models": {
    "PersonMet": {
      "accountRelation": {
        "type": "list",
      },
      "id": "PersonMetID",
      "implements": [],
      "interface": false,
    },
  },
  "objects": {
    "PersonMet": {
      "date": {
        "immutable": false,
        "indexed": true,
        "required": false,
        "type": "date",
      },
      "other": {
        "immutable": false,
        "required": true,
        "type": "did",
      },
      "self": {
        "type": "view",
        "viewType": "documentAccount",
      },
    },
  },
}
`;
